<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.mcgill.ecse321.tutoringsystem.Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorAccent"
            android:visibility="gone" />
        <EditText
            android:id="@+id/newstudent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newstudent_namehint" />
        <EditText
            android:id="@+id/newstudent_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newstudent_usernamehint" />
        <EditText
            android:id="@+id/newstudent_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newstudent_emailhint" />
        <EditText
            android:id="@+id/newstudent_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/newstudent_passwordhint" />
        <EditText
            android:id="@+id/newstudent_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/newstudent_confirmedpasswordhint" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="register"
            android:text="@string/newstudent_RegisterButton"/>
    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>
